test_regress/t/t_array_method.out
%Error-UNSUPPORTED: t/t_array_method.v:26:14: Unsupported: with statements
   26 |       q.sort with (item == 2);
      |              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:28:17: Unsupported: with statements
   28 |       q.sort(x) with (x == 3);
      |                 ^~~~
%Error: t/t_array_method.v:28:14: Can't find definition of variable: 'x'
   28 |       q.sort(x) with (x == 3);
      |              ^
%Error-UNSUPPORTED: t/t_array_method.v:33:15: Unsupported: with statements
   33 |       q.rsort with (item == 2);
      |               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:47:19: Unsupported: with statements
   47 |       qv = q.find with (item == 2);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:49:25: Unsupported: with statements
   49 |       qv = q.find_first with (item == 2);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:51:24: Unsupported: with statements
   51 |       qv = q.find_last with (item == 2);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:54:19: Unsupported: with statements
   54 |       qv = q.find with (item == 20);
      |                   ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:56:25: Unsupported: with statements
   56 |       qv = q.find_first with (item == 20);
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:58:24: Unsupported: with statements
   58 |       qv = q.find_last with (item == 20);
      |                        ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:61:25: Unsupported: with statements
   61 |       qi = q.find_index with (item == 2); qi.sort;
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:63:31: Unsupported: with statements
   63 |       qi = q.find_first_index with (item == 2);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:65:30: Unsupported: with statements
   65 |       qi = q.find_last_index with (item == 2);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:68:25: Unsupported: with statements
   68 |       qi = q.find_index with (item == 20); qi.sort;
      |                         ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:70:31: Unsupported: with statements
   70 |       qi = q.find_first_index with (item == 20);
      |                               ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:72:30: Unsupported: with statements
   72 |       qi = q.find_last_index with (item == 20);
      |                              ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:83:17: Unsupported: with statements
   83 |       i = q.sum with (item + 1); do if ((i) !== (32'h11)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",83, (i), (32'h11)); $stop; end while(0);;
      |                 ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:85:21: Unsupported: with statements
   85 |       i = q.product with (item + 1); do if ((i) !== (32'h168)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",85, (i), (32'h168)); $stop; end while(0);;
      |                     ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:89:17: Unsupported: with statements
   89 |       i = q.and with (item + 1); do if ((i) !== (32'b1001)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",89, (i), (32'b1001)); $stop; end while(0);;
      |                 ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:91:16: Unsupported: with statements
   91 |       i = q.or with (item + 1); do if ((i) !== (32'b1111)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",91, (i), (32'b1111)); $stop; end while(0);;
      |                ^~~~
%Error-UNSUPPORTED: t/t_array_method.v:93:17: Unsupported: with statements
   93 |       i = q.xor with (item + 1); do if ((i) !== (32'hb)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",93, (i), (32'hb)); $stop; end while(0);;
      |                 ^~~~
%Error: Exiting due to
